--- a/public/index.html
+++ b/public/index.html
@@ -28,15 +28,18 @@
     <nav id="nav-bar">
       <img class="logo" src="/images/bird.png">
       <span class="header">Tweeter</span>
+      <button id="compose-button" type="submit">✏️ COMPOSE</button>
     </nav>
 
     <!-- Page-specific (main) content here -->
     <main class="container">
       <section class="new-tweet">
         <h2>Compose Tweet</h2>
-        <form action='/tweets/' method='POST'>
+        <h5 id="empty-tweet">Please enter a tweet!</h5>
+        <h5 id="over-char-limit">Tweet cannot be more than 140 characters.</h5>
+        <form id='form-submit' action='/tweets/' method='POST'>
           <textarea name="text" placeholder="What are you humming about?"></textarea>
-          <input type="submit" value="Tweet">
+          <input id="submit-tweet" type="submit" value="Tweet">
           <span class="counter">140</span>
         </form>
       </section>
