Cleaned up and added comments

--- a/public/index.html
+++ b/public/index.html
@@ -31,11 +31,12 @@
         <img class="logo" src="/images/bird.png">
         <span class="header">Tweeter</span>
       </div>
-      <button id="compose-button" type="submit">✏️ COMPOSE</button>
+      <button id="compose-button" type="submit">✏️ Compose</button>
     </nav>
 
     <!-- Page-specific (main) content here -->
     <main class="container">
+      <!-- Section in which user enters new tweets -->
       <section class="new-tweet">
         <h2>Compose Tweet</h2>
         <h5 id="empty-tweet">Please enter a tweet!</h5>
@@ -48,6 +49,7 @@
           </div>
         </form>
       </section>
+      <!-- Section in which existing tweets are displayed -->
       <section id="tweets-container">
         <article class="tweet"></article>
       </section>
